# Pixlang-custom-langage

./: README.md
analyzer/: analyser.ml  dune  renaming.ml  simplifier.ml  type_analyser.ml
interpreter/: dune  interpreter.ml  interpreter.mli
langage/: ast.ml  ast.mli  dune
parser/: Lexer.mll  Parser.mly  dune
programs/good_examples/: arg_list.pix  checkerboard.pix  circle.pix  disk.pix  extension_pow2.pix  extension_question.pix  extension_while.pix  inner_overwrite.pix  list.pix  list_2.pix  points.pix  rectangle.pix  rectangle_with_args.pix  renaming.pix  simplifications.pix  spiral.pix  statements.pix  triangle.pix  types.pix  variables.pix
programs/semantic_incorrect/: append_to_non_list.pix  bad_declaration.pix  color_of_wrong_type.pix  coord_of_wrong_type.pix  ill_typed_if.pix  inconsistent_type.pix  non_homogeneous_append.pix  non_homogeneous_for.pix  non_homogeneous_list.pix  non_list_foreach.pix  pixel_of_wrong_type.pix  unary_op_wrong_type.pix  undeclared_variable_assign.pix  undeclared_variable_use.pix  uninitialised_variable.pix  wrong_field.pix
util/: dune  environment.ml  environment.mli
